--- a/themes/homecoming/scss/site/_site.scss
+++ b/themes/homecoming/scss/site/_site.scss
@@ -106,6 +106,13 @@ Layout
 		margin-bottom: .5em;
 	}
 }
+.main li {
+    margin-bottom: .5em;
+}
+.main ol ul, .main ol ol, .main ul ol, .main ul ul {
+	margin-top: .5em;
+}
+
 
 /* ---------------------------------------------------------------
 Hero Carousel
@@ -128,60 +135,6 @@ Hero Carousel
 }
 .HomePage .featuredimage {
 	padding-top: 40%;
-}
-.loader {
-	position: absolute;
-	background: url(../images/spinner.png);
-	width: 80px;
-	height: 80px;
-	left: 50%;
-	top: 40%;
-	margin: -40px auto auto -40px;
-	-webkit-background-size: 100% auto;
-	-moz-background-size: 100% auto;
-	-ms-background-size: 100% auto;
-	-o-background-size: 100% auto;
-	background-size: 100% auto;
-	-webkit-animation: spinnerRotate 1s infinite linear;
-	-moz-animation: spinnerRotate 1s infinite linear;
-	-ms-animation: spinnerRotate 1s infinite linear;
-	-o-animation: spinnerRotate 1s infinite linear;
-	animation: spinnerRotate 1s infinite linear;
-}
-@-webkit-keyframes spinnerRotate {
-	from {
-		-webkit-transform:rotate(0deg);
-	}
-	to {
-		-webkit-transform:rotate(360deg);
-	}
-}
-
-@-moz-keyframes spinnerRotate {
-	from {
-		-moz-transform:rotate(0deg);
-	}
-	to {
-		-moz-transform:rotate(360deg);
-	}
-}
-
-@-o-keyframes spinnerRotate {
-	from {
-		-o-transform:rotate(0deg);
-	}
-	to {
-		-o-transform:rotate(360deg);
-	}
-}
-
-@keyframes spinnerRotate {
-	from {
-		transform:rotate(0deg);
-	}
-	to {
-		transform:rotate(360deg);
-	}
 }
 .hero-slider {
 	position: absolute;
