--- a/themes/homecoming/scss/site/_calendar.scss
+++ b/themes/homecoming/scss/site/_calendar.scss
@@ -62,6 +62,9 @@ Schedule
 .list-item .list-desc {
 	margin-bottom: 0;
 }
+.category-events-title {
+	margin-bottom: 0;
+}
 
 /* ---------------------------------------------------------------
 Event Page
@@ -70,3 +73,4 @@ Event Page
 	display: block;
 	margin-bottom: 1.5em;
 }
+
