--- a/themes/homecoming/scss/master.scss
+++ b/themes/homecoming/scss/master.scss
@@ -26,7 +26,10 @@
 /* Plugins
 -------------------------------------------*/
 @import "plugins/_flexslider";
-@import "plugins/_colorbox";
+@import "plugins/jquery.fancybox";
+@import "plugins/jquery.fancybox-buttons";
+@import "plugins/jquery.fancybox-thumbs";
+
 
 
 /* Layout
